@@ -1,0 +1,10 @@
+# $Id$
+# kdebase/kcontrol/kwm/pics
+
+SUBDIRS = mini
+
+icons_DATA = buttons.xpm kcmkwm.xpm properties.xpm titlebar.xpm
+
+iconsdir = $(kde_icondir)
+
+EXTRA_DIST = $(icons_DATA)
