@@ -1,0 +1,8 @@
+# $Id$
+# kdebase/kcontrol/kwm/pics/mini
+
+icons_DATA = buttons.xpm kcmkwm.xpm titlebar.xpm windows.xpm winprops.xpm
+
+iconsdir = $(kde_minidir)
+
+EXTRA_DIST = $(icons_DATA)
